Todo porque se daño

--- a/Series/angular.json
+++ b/Series/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "tutorialcourses": {
+    "Series": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/tutorialcourses",
+            "outputPath": "dist/series",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -27,7 +27,7 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
-            ],
+           ],
             "scripts": []
           },
           "configurations": {
@@ -61,10 +61,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "tutorialcourses:build:production"
+              "browserTarget": "Series:build:production"
             },
             "development": {
-              "browserTarget": "tutorialcourses:build:development"
+              "browserTarget": "Series:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -72,7 +72,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "tutorialcourses:build"
+            "browserTarget": "Series:build"
           }
         },
         "test": {
@@ -100,3 +100,4 @@
     "analytics": false
   }
 }
+
